Update social media links

--- a/templates/modules/widgets/profile.html
+++ b/templates/modules/widgets/profile.html
@@ -37,6 +37,7 @@
     <div th:with="social_medias = ${theme.config.sidebar.social_media}" class="grid grid-cols-6 items-center gap-5">
       <a
         th:each="social_media : ${social_medias}"
+        th:aria-label="${social_media.name}"
         class="flex cursor-pointer items-center justify-center rounded p-1 hover:bg-gray-100 dark:hover:bg-slate-700"
         th:href="${social_media.url}"
         target="_blank"
